Revert "Fixes dropdown arrow z-index on error #1458"

--- a/src/utils/decorators/input/input.scss
+++ b/src/utils/decorators/input/input.scss
@@ -277,13 +277,7 @@
     position: relative;
     z-index: 1;
   }
-}
 
-.common-input--error,
-.common-input--warning {
-  .carbon-icon {
-    z-index: 1;
-  }
 }
 
 /**
